# flipflop

./: .editorconfig  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
flipflop/: __init__.py  __main__.py
flipflop/core/: __init__.py  evaluator.py  exceptions.py  interpreter.py  lexer.py  node.py  parser.py  reader.py  token.py  wordifier.py
tests/: test_evaluator.py  test_interpreter.py  test_lexer.py  test_main.py  test_node.py  test_parser.py  test_reader.py  test_token.py  test_wordifier.py
