[tool.poetry]
name = "flipflop"
version = "0.1.0"
description = "FlipFlop Logical Interpreted Language"
authors = ["Miłosz Skaza <m.skaza@codesk.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
tabulate = "^0.9.0"

[tool.poetry.scripts]
flipflop = "flipflop.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.3"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
