[project]
name = "flipflop"
version = "0.1.0"
description = "FlipFlop Logical Interpreted Language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "tabulate>=0.9.0",
]

[project.scripts]
flipflop = "flipflop.__main__:main"

[dependency-groups]
dev = [
    "coverage>=7.7.0",
    "ruff>=0.11.0",
]
